--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
           <div class="bg-cardImgBg p-8 rounded-2xl">
             <img src="images/jacket-1.png" alt="">
           </div>
-         <div class="space-y-3 mt-3">
-          <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
-          <p>Lorem Ipsum is simply dummy text of the
-            printing and typesetting industry.</p>
-          <div class="flex justify-between">
-            <h2 class="text-4xl font-black">$250</h2>
-            <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 inline">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-              </svg>
-              Buy Now</button>
+          <div class="space-y-3 mt-3">
+            <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h2 class="text-4xl font-black">$250</h2>
+              <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now</button>
+            </div>
           </div>
-         </div>
         </div>
       </div>
       <!-- jacket-2 -->
@@ -87,18 +87,18 @@
           </div>
           <div class="space-y-3 mt-3">
             <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
-          <p>Lorem Ipsum is simply dummy text of the
-            printing and typesetting industry.</p>
-          <div class="flex justify-between">
-            <h2 class="text-4xl font-black">$250</h2>
-            <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 inline">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-              </svg>
-              Buy Now</button>
-          </div>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h2 class="text-4xl font-black">$250</h2>
+              <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now</button>
+            </div>
           </div>
         </div>
       </div>
@@ -110,22 +110,22 @@
           </div>
           <div class="space-y-3 mt-3">
             <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
-          <p>Lorem Ipsum is simply dummy text of the
-            printing and typesetting industry.</p>
-          <div class="flex justify-between">
-            <h2 class="text-4xl font-black">$250</h2>
-            <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 inline">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-              </svg>
-              Buy Now</button>
-          </div>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h2 class="text-4xl font-black">$250</h2>
+              <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now</button>
+            </div>
           </div>
         </div>
       </div>
-      
+
     </section>
     <!-- Woman Jacket Section End -->
 
@@ -138,21 +138,21 @@
           <div class="bg-cardImgBg p-8 rounded-2xl">
             <img src="images/jacket-4.png" alt="">
           </div>
-         <div class="space-y-3 mt-3">
-          <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
-          <p>Lorem Ipsum is simply dummy text of the
-            printing and typesetting industry.</p>
-          <div class="flex justify-between">
-            <h2 class="text-4xl font-black">$250</h2>
-            <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 inline">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-              </svg>
-              Buy Now</button>
+          <div class="space-y-3 mt-3">
+            <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h2 class="text-4xl font-black">$250</h2>
+              <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now</button>
+            </div>
           </div>
-         </div>
         </div>
       </div>
       <!-- jacket-2 -->
@@ -163,18 +163,18 @@
           </div>
           <div class="space-y-3 mt-3">
             <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
-          <p>Lorem Ipsum is simply dummy text of the
-            printing and typesetting industry.</p>
-          <div class="flex justify-between">
-            <h2 class="text-4xl font-black">$250</h2>
-            <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 inline">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-              </svg>
-              Buy Now</button>
-          </div>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h2 class="text-4xl font-black">$250</h2>
+              <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now</button>
+            </div>
           </div>
         </div>
       </div>
@@ -186,24 +186,66 @@
           </div>
           <div class="space-y-3 mt-3">
             <h3 class="text-2xl font-bold">Yellow Coat Jacket</h3>
-          <p>Lorem Ipsum is simply dummy text of the
-            printing and typesetting industry.</p>
-          <div class="flex justify-between">
-            <h2 class="text-4xl font-black">$250</h2>
-            <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
-              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                stroke="currentColor" class="w-6 h-6 inline">
-                <path stroke-linecap="round" stroke-linejoin="round"
-                  d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
-              </svg>
-              Buy Now</button>
-          </div>
+            <p>Lorem Ipsum is simply dummy text of the
+              printing and typesetting industry.</p>
+            <div class="flex justify-between">
+              <h2 class="text-4xl font-black">$250</h2>
+              <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                  stroke="currentColor" class="w-6 h-6 inline">
+                  <path stroke-linecap="round" stroke-linejoin="round"
+                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                </svg>
+                Buy Now</button>
+            </div>
           </div>
         </div>
       </div>
-      
+
     </section>
     <!-- Man Jacket Section End -->
+
+    <!-- Last Section start -->
+    <section class="grid lg:grid-cols-2 mt-20 gap-x-24 gap-y-16 items-center mb-56">
+      <!-- Find the Perfect Fit -->
+      <div class="grid grid-cols-1 gap-y-5">
+        <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center md:justify-start">
+          <div class="lg:col-span-2 flex justify-center md:block">
+            <img class="w-20 lg:w-full" src="icons/image 12.png" alt="">
+          </div>
+          <div class="lg:col-span-10 space-y-4">
+            <h2 class="text-3xl font-bold">Find the Perfect Fit</h2>
+            <p>Everybody is different, which is why we <br>
+              offer styles for every body.</p>
+          </div>
+        </div>
+        <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center md:justify-start">
+          <div class="lg:col-span-2 flex justify-center md:block">
+            <img class="w-20 lg:w-full" src="icons/image 13.png" alt="">
+          </div>
+          <div class="lg:col-span-10 space-y-4">
+            <h2 class="text-3xl font-bold">Find the Perfect Fit</h2>
+            <p>Everybody is different, which is why we <br>
+              offer styles for every body.</p>
+          </div>
+        </div>
+        <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center md:justify-start">
+          <div class="lg:col-span-2 flex justify-center md:block">
+            <img class="w-20 lg:w-full" src="icons/image 14.png" alt="">
+          </div>
+          <div class="lg:col-span-10 space-y-4">
+            <h2 class="text-3xl font-bold">Find the Perfect Fit</h2>
+            <p>Everybody is different, which is why we <br>
+              offer styles for every body.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="flex items-center justify-end">
+        <img src="images/shopping.png" alt="">
+      </div>
+    </section>
+    <!-- Last Section end -->
   </main>
 </body>
 
