--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 
     <!-- Last Section start -->
     <section class="grid lg:grid-cols-2 mt-20 gap-x-24 gap-y-16 items-center mb-56">
-      <!-- Find the Perfect Fit -->
       <div class="grid grid-cols-1 gap-y-5">
-        <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center md:justify-start">
+        <!-- Find the Perfect Fit -->
+        <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center            md:justify-start">
           <div class="lg:col-span-2 flex justify-center md:block">
             <img class="w-20 lg:w-full" src="icons/image 12.png" alt="">
           </div>
@@ -263,6 +263,8 @@
               offer styles for every body.</p>
           </div>
         </div>
+
+        <!-- Free Exchanges -->
         <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center md:justify-start">
           <div class="lg:col-span-2 flex justify-center md:block">
             <img class="w-20 lg:w-full" src="icons/image 13.png" alt="">
@@ -273,6 +275,8 @@
               offer styles for every body.</p>
           </div>
         </div>
+
+        <!-- Contact Our Seller -->
         <div class="grid lg:grid-cols-12 gap-8 shadow-lg p-7 rounded-3xl justify-center md:justify-start">
           <div class="lg:col-span-2 flex justify-center md:block">
             <img class="w-20 lg:w-full" src="icons/image 14.png" alt="">
@@ -284,7 +288,8 @@
           </div>
         </div>
       </div>
-
+      
+      <!-- Shopping Image -->
       <div class="flex items-center justify-end">
         <img src="images/shopping.png" alt="">
       </div>
