add dollars color and edit last section texts

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p>Lorem Ipsum is simply dummy text of the
               printing and typesetting industry.</p>
             <div class="flex justify-between">
-              <h2 class="text-4xl font-black">$250</h2>
+              <h2 class="text-4xl font-black text-yellow-400">$250</h2>
               <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6 inline">
@@ -134,7 +134,7 @@
             <p>Lorem Ipsum is simply dummy text of the
               printing and typesetting industry.</p>
             <div class="flex justify-between">
-              <h2 class="text-4xl font-black">$250</h2>
+              <h2 class="text-4xl font-black text-yellow-400">$250</h2>
               <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6 inline">
@@ -157,7 +157,7 @@
             <p>Lorem Ipsum is simply dummy text of the
               printing and typesetting industry.</p>
             <div class="flex justify-between">
-              <h2 class="text-4xl font-black">$250</h2>
+              <h2 class="text-4xl font-black text-yellow-400">$250</h2>
               <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6 inline">
@@ -187,7 +187,7 @@
             <p>Lorem Ipsum is simply dummy text of the
               printing and typesetting industry.</p>
             <div class="flex justify-between">
-              <h2 class="text-4xl font-black">$250</h2>
+              <h2 class="text-4xl font-black text-yellow-400">$250</h2>
               <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6 inline">
@@ -210,7 +210,7 @@
             <p>Lorem Ipsum is simply dummy text of the
               printing and typesetting industry.</p>
             <div class="flex justify-between">
-              <h2 class="text-4xl font-black">$250</h2>
+              <h2 class="text-4xl font-black text-yellow-400">$250</h2>
               <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6 inline">
@@ -233,7 +233,7 @@
             <p>Lorem Ipsum is simply dummy text of the
               printing and typesetting industry.</p>
             <div class="flex justify-between">
-              <h2 class="text-4xl font-black">$250</h2>
+              <h2 class="text-4xl font-black text-yellow-400">$250</h2>
               <button class="uppercase bg-[#A4BC46] py-3 px-5 rounded text-white font-semibold ">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                   stroke="currentColor" class="w-6 h-6 inline">
@@ -270,9 +270,9 @@
             <img class="w-20 lg:w-full" src="icons/image 13.png" alt="">
           </div>
           <div class="lg:col-span-10 space-y-4">
-            <h2 class="text-3xl font-bold">Find the Perfect Fit</h2>
-            <p>Everybody is different, which is why we <br>
-              offer styles for every body.</p>
+            <h2 class="text-3xl font-bold">Free Exchanges</h2>
+            <p>One of the many reasons you can shop
+              with peace of mind.</p>
           </div>
         </div>
 
@@ -282,13 +282,13 @@
             <img class="w-20 lg:w-full" src="icons/image 14.png" alt="">
           </div>
           <div class="lg:col-span-10 space-y-4">
-            <h2 class="text-3xl font-bold">Find the Perfect Fit</h2>
-            <p>Everybody is different, which is why we <br>
-              offer styles for every body.</p>
+            <h2 class="text-3xl font-bold">Contact Our Seller</h2>
+            <p>They are here to help you. That's quite 
+              literally what we pay them for.</p>
           </div>
         </div>
       </div>
-      
+
       <!-- Shopping Image -->
       <div class="flex items-center justify-end">
         <img src="images/shopping.png" alt="">
